# codesearch-rs

./: Cargo.toml
examples/: cinspect.rs
src/consts/src/: lib.rs
src/libcindex/: Cargo.toml
src/libcindex/src/: lib.rs
src/libcindex/src/merge/: merge.rs  merger.rs  mod.rs  postdatawriter.rs  postmapreader.rs
src/libcindex/src/writer/: error.rs  mod.rs  postentry.rs  postheap.rs  postinglist.rs  sort_post.rs  sparseset.rs  trigramiter.rs  write.rs
src/libcsearch/: Cargo.toml
src/libcsearch/src/: lib.rs  regexp.rs
src/libcsearch/src/reader/: read.rs  search.rs
src/libcustomlogger/: Cargo.toml
src/libcustomlogger/src/: lib.rs
src/libprofiling/src/: lib.rs
src/libvarint/src/: lib.rs
tests/: merge_test.rs  read_test.rs  regexp_test.rs  write_test.rs
tests/common/: mod.rs
