[package]
name = "codesearch-rs"
version = "0.6.2"
authors = ["Vernon Jones <vernonrjones@gmail.com>"]
license = "BSD-3-Clause"
description = "Tool for indexing then performing regular expression searches over large bodies of code"
documentation = "https://github.com/vernonrj/codesearch-rs"
homepage = "https://github.com/vernonrj/codesearch-rs"
repository = "https://github.com/vernonrj/codesearch-rs"

[dependencies]
atty = "0.2.14"
bytecount = "0.4"
clap = "2.1"
glob = "0.3"
grep = "0.1"
libc = "0.2"
log = "0.4"
memchr = "1.0"
regex = "0.2"
regex-syntax = "0.4"
tempfile = "3.3"
termcolor = "1.1"
walkdir = "2"

consts = { path = "src/consts" }
libcindex = { path = "src/libcindex" }
libcsearch = { path = "src/libcsearch" }
libcustomlogger = { path = "src/libcustomlogger" }
libprofiling = { path = "src/libprofiling" }
libvarint = { path = "src/libvarint" }

[features]
default = ["runtime-dispatch-simd"]
profile = []
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]

[workspace]
members = [
  "src/libcindex",
  "src/libcsearch",
  "src/libcustomlogger",
  "src/libprofiling",
  "src/libvarint",
]
