[package]
name = "libcindex"
version = "0.1.0"
authors = ["Vernon Jones <vernonrjones@gmail.com>"]

[dependencies]
byteorder = "1.4"
log = "0.4"
tempfile = "3.3"

consts = { path = "../consts" }
libcsearch = { path = "../libcsearch" }
libprofiling = { path = "../libprofiling" }
libvarint = { path = "../libvarint" }
